Add main menu configuration to config.toml

--- a/datanautiq-edtech/config.toml
+++ b/datanautiq-edtech/config.toml
@@ -1,1 +1,26 @@
+menu:
+  main:
+    - name: "Home"
+      url: "/"
+      weight: 1
+
+    - name: "Live Courses"
+      url: "/courses/live/"
+      weight: 2
+
+    - name: "All Courses"
+      url: "/courses/"
+      weight: 3
+
+    - name: "Blogs"
+      url: "/blogs/"
+      weight: 4
+
+    - name: "Contact"
+      url: "/contact/"
+      weight: 5
+
+    - name: "Feedback"
+      url: "/feedback/"
+      weight: 6
 
