--- a/datanautiq-edtech/config.toml
+++ b/datanautiq-edtech/config.toml
@@ -1,3 +1,7 @@
+baseURL = "https://datanautiq.github.io/"
+languageCode = "en-us"
+title = "DataNautIQ"
+theme = "ananke"
 menu:
   main:
     - name: "Home"
